--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.36.0",
+    "dotenv": "^17.2.3",
     "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwindcss": "^4.1.18"
